// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for TaboolaActions's syncAudience destination action: all fields 1`] = `
Object {
  "audience_id": "A1SucSJy8v08l",
  "identities": Array [
    Object {
      "cluster": Array [
        Object {
          "is_hashed": true,
          "type": "EMAIL_ID",
          "user_id": "71df1c9c38d0aeb45752b034fdf5ce57735411c6ede52a4cb0064dbdac660160",
        },
        Object {
          "is_hashed": false,
          "type": "DEVICE_ID",
          "user_id": "A1SucSJy8v08l",
        },
      ],
    },
  ],
  "operation": "REMOVE",
}
`;

exports[`Testing snapshot for TaboolaActions's syncAudience destination action: required fields 1`] = `
Object {
  "audience_id": "A1SucSJy8v08l",
  "identities": Array [
    Object {
      "cluster": Array [
        Object {
          "is_hashed": false,
          "type": "DEVICE_ID",
          "user_id": "A1SucSJy8v08l",
        },
      ],
    },
  ],
  "operation": "REMOVE",
}
`;
